--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,8 @@ services:
     restart: always
     env_file:
       - .env
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./medicalproject:/app/medicalproject
+    command: sh -c "cd medicalproject && python manage.py migrate && python manage.py collectstatic --noinput && gunicorn medicalproject.wsgi:application --bind 0.0.0.0:8000 --workers 3"
