update homepage to new version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,13 @@ services:
       - .env
     ports:
       - "8000:8000"
-    volumes:
-      - ./medicalproject:/app/medicalproject
-    command: sh -c "cd medicalproject && python manage.py migrate && python manage.py collectstatic --noinput && gunicorn medicalproject.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+    command: >
+      sh -c "
+      cd medicalproject &&
+      python manage.py migrate &&
+      python manage.py collectstatic --noinput &&
+      gunicorn medicalproject.wsgi:application
+      --bind 0.0.0.0:8000
+      --workers 3
+      "
+
